--- a/IntelligentMonitor/wwwroot/css/main.css
+++ b/IntelligentMonitor/wwwroot/css/main.css
@@ -1,21 +1,132 @@
-﻿body{
-    background-color:#aaa;
+﻿html, body {
+    height: 100%;
+    font-family: "微软雅黑";
+    overflow-x: hidden;
 }
-.wrap{
-    width:100%;
-    height:100%;
-    overflow:hidden;
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
 }
-.header{
-    height:50px;
-    background-color:#ddd;
+
+::-webkit-scrollbar-track {
+    background: #fff;
+    -webkit-box-shadow: inset 1px 1px 2px #e0e0e0;
+    border: 1px solid #d8d8d8;
 }
+
+::-webkit-scrollbar-thumb {
+    background: #e8e8e8;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(155, 155, 155, 0.4);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #888;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+body {
+    background-image: url(../imgs/background-1.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #000;
+}
+
 .main {
-    width: 98%;
-    margin: 0 auto;
-    background-color: #ccc;
+    height: 100%;
 }
-.charts{
-    text-align:center;
-    line-height:400px;
+.nav {
+    width: 100%;
+    height: 50px;
+}
+.nav-header{
+    float:left;
+}
+.nav-header-brand {
+    margin-left: 15px;
+}
+
+.nav-header-brand img{
+    height:35px;
+    margin-top:2.5px;
+}
+.nav-title {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 50px;
+    margin: 0 auto;
+    width: 160px;
+}
+.nav-time {
+    float: right;
+    color: #fff;
+    line-height: 50px;
+    font-weight: 900;
+    margin-right: 15px;
+}
+
+.nav-menu {
+    width: 100%;
+    height: 100%;
+    
+}
+.user{
+    padding-bottom:50px;
+}
+
+.user p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    padding-top: 40px;
+}
+
+.theme {
+    width: 150px;
+    margin: 0 auto;
+}
+
+.theme-plan-group {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    width: auto;
+    height: 20px;
+    overflow: hidden;
+    border: 1px solid #eee;
+    padding: 5px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+.theme-plan-color {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    margin-left: 2px;
+    margin-right: 2px;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.content {
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    bottom: 0px;
+    left: 0px;
+}
+
+.charts {
+    text-align: center;
+    line-height: 300px;
 }
