--- a/IntelligentMonitor/wwwroot/css/login.css
+++ b/IntelligentMonitor/wwwroot/css/login.css
@@ -158,7 +158,8 @@ canvas {
     width: 100%;
     height: 100%;
     position: relative;
-    background-image: url(../imgs/bg.jpg);
+    background-image: url(../imgs/background-3.png);
+    background-color:#000;
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
