--- a/IntelligentMonitor/Views/Home/Back.cshtml
+++ b/IntelligentMonitor/Views/Home/Back.cshtml
@@ -20,7 +20,7 @@
                         </a>
                     </li>
                     <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                        <a href="@Url.Action("Index", "Home")" target="_blank" title="首页预览">
+                        <a href="@Url.Action("Index", "Home")" target="_blank" title="查看首页">
                             <i class="layui-icon layui-icon-website"></i>
                         </a>
                     </li>
