--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 </a>
             </div>
             <div class="nav-time">
-                <span>
+                <span title="菜单">
                     <i class="layui-icon layui-icon-shrink-right"></i>
                 </span>
                 <span>
