theme change done.

--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <link href="~/layuiadmin/layui/css/layui.css" rel="stylesheet" />
     <link href="~/css/main.css" rel="stylesheet" />
 </head>
-<body class="blackbg">
+<body>
     <div class="main">
         <div class="nav">
             <div class="nav-header">
