page full screen done

--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -18,6 +18,9 @@
                 <span title="菜单">
                     <i class="layui-icon layui-icon-shrink-right"></i>
                 </span>
+                <span title="全屏">
+                    <i class="layui-icon layui-icon-screen-full"></i>
+                </span>
                 <span>
                     <i class="layui-icon layui-icon-user"></i>
                     @User.Identity.Name !
