--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="nav">
             <div class="nav-header">
                 <a href="@Url.Action("Index", "Home")" class="nav-header-brand">
-                    <img src="~/imgs/logo.png" />
+                    <img src="~/imgs/logo_white.png" />
                 </a>
             </div>
             <div class="nav-time">
