--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>联诺智能监控系统</title>
     <link href="~/layuiadmin/layui/css/layui.css" rel="stylesheet" />
-    <link href="~/css/main.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/main.min.css" asp-append-version="true" rel="stylesheet" />
 </head>
 <body>
     <div class="main">
@@ -55,7 +55,7 @@
     <script src="~/js/jquery-2.1.1.min.js"></script>
     <script src="~/js/echarts.min.js"></script>
     <script src="~/js/mSlider.min.js"></script>
-    <script src="~/js/main.js" asp-append-version="true"></script>
+    <script src="~/js/main.min.js" asp-append-version="true"></script>
     @if ((await AuthorizationService.AuthorizeAsync(User, null, new PermissionAuthorizationRequirement(IntelligentMonitor.Authorization.Permissions.UserEditor))).Succeeded)
     {
         <script src="~/js/jquery.dad.min.js"></script>
