图表支持记忆拖放排序。

--- a/IntelligentMonitor/Views/Home/Back.cshtml
+++ b/IntelligentMonitor/Views/Home/Back.cshtml
@@ -65,8 +65,11 @@
                                 <cite>主页</cite>
                             </a>
                             <dl class="layui-nav-child">
-                                <dd data-name="console" class="layui-this">
+                                <dd class="layui-this">
                                     <a lay-href="@Url.Action("Index", "Home")">首页预览</a>
+                                </dd>
+                                <dd>
+                                    <a lay-href="@Url.Action("ChartsEdit", "Home")">图表设置</a>
                                 </dd>
                             </dl>
                         </li>
