--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     <title>联诺智能监控系统</title>
     <link href="~/layuiadmin/layui/css/layui.css" rel="stylesheet" />
     <link href="~/css/main.min.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/drap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="main">
