--- a/IntelligentMonitor/Views/Home/Back.cshtml
+++ b/IntelligentMonitor/Views/Home/Back.cshtml
@@ -73,6 +73,9 @@
                                     <dd>
                                         <a lay-href="@Url.Action("ChartsEdit", "Home")">图表设置</a>
                                     </dd>
+                                    <dd>
+                                        <a lay-href="@Url.Action("Dashboard", "Home")">仪表盘</a>
+                                    </dd>
                                 }
                             </dl>
                         </li>
